--- a/todolist.css
+++ b/todolist.css
@@ -9,6 +9,7 @@ body {
 
 h1{font-size:220%;
   text-decoration: underline;
+  text-decoration: line-through;
 }
 
 .gauche {
@@ -52,6 +53,7 @@ h1{font-size:220%;
 .result {width:100%;
   color: aliceblue;
   background-color: rgb(0, 0, 0);
+  font-size:120%;
 }
 
 .f5 {
@@ -82,7 +84,8 @@ margin-top:0.2%;
 
 .SUP:hover{background-color:lightslategray;
 color:black;
-cursor: pointer;}
+cursor: crosshair;
+}
 
 .MOD:hover{background-color:black;
   color:darkslategrey;
@@ -99,4 +102,16 @@ cursor: pointer;}
   right:8%;
   margin-top:0.2%;
   }
+
+.COCHER{width:80%;
+position:absolute;
+left:0%;
+height:40px;
+opacity:0;
+}
+
+.COCHER:hover{cursor:grab;}
+
+
+  
 
