--- a/todolist.css
+++ b/todolist.css
@@ -1,3 +1,11 @@
+label{text-shadow: 0 0 5px #0192a5, 0 0 15px #0192a5, 0 0 20px #0192a5, 
+  0 0 40px #0192a5, 0 0 60px #000ece, 0 0 10px #0192a5, 0 0 98px #000ece;
+  color: #a9fff8;}
+
+
+
+
+
 body {
   font-family: cursive,sans-serif;
   height: 100%;
@@ -100,7 +108,7 @@ padding-bottom:4px;}
   padding:7px;
   position:absolute;
   right:8%;
-  margin-top:0.2%;
+  margin-top:0.1%;
   }
 
 .COCHER{width:80%;
@@ -122,7 +130,7 @@ color:black;}
 .COCHER:hover{cursor:grab;
 }
 
-.result p:hover{color:lightseagreen}
+.result p:hover{color:#a9fff8;}
 
 h1 span{font-size:220%;
   background-color:rgb(0, 0, 0);
@@ -132,7 +140,37 @@ h1 span{font-size:220%;
 
 /* ! Anim Title */
 
-h1 span{animation:move 4s ease-in-out infinite}
+
+.result p{
+	background-image: url(https://media.giphy.com/media/MDXomrcGshGso/giphy.gif);
+    background-size: cover;
+	color: transparent;
+    background-clip:border-box
+    -moz-background-clip: text;
+	-webkit-background-clip: text;}
+
+
+label{animation: blink 12s infinite;}
+.result p:hover{animation:blink 10s infinite;}
+
+@keyframes blink {
+  20%,22%,55%,75%,96%,98%{
+    color: #111;
+    text-shadow: none;
+  }
+
+  0%,19%,21%,23%,25%,54%,56%,74%,76%,95%,97%,99%,100% {
+text-shadow: 0 0 5px #0192a5, 0 0 15px #0192a5, 0 0 20px #0192a5, 0 0 40px #0192a5,
+0 0 60px #000ece, 0 0 10px #0192a5, 0 0 98px #000ece;color: #a9fff8;
+  }
+}
+
+
+
+
+
+
+h1 span{animation:move 4s ease-in-out infinite, glow 1.5s linear infinite; }
 
 
 
@@ -141,13 +179,12 @@ h1 span{animation:move 4s ease-in-out infinite}
     transform: translate(-30%, 0);
   }
   50% {
-    text-shadow: 1px 1px 25px rgba(255, 255, 255, 1);
+    text-shadow: 1px 1px 15px rgb(36, 195, 216),0px 0px 25px rgb(36, 195, 216), 0px 0px 50px rgb(36, 195, 216);
   }
   100% {
     transform: translate(30%, 0);
   }
 }
-
 
 
 
@@ -180,6 +217,14 @@ h1 span:nth-child(8) {
 }
 
 
+@keyframes glow {
+  0% {
+    filter: hue-rotate(0deg);
+  }
+  100% {
+    filter: hue-rotate(360deg);
+  }
+}
 
 
 /* ! RESPONSIVE */
