--- a/todolist.css
+++ b/todolist.css
@@ -52,6 +52,7 @@ body {
   background-color: rgb(0, 0, 0);
   position: relative;
   padding-bottom:4px;
+  z-index:5;
 }
 
 .result {width:99.4%;
@@ -109,7 +110,8 @@ padding-bottom:4px;}
   padding:7px;
   position:absolute;
   right:8%;
-  margin-top:0.1%;
+  margin-top:-6.8%;
+  z-index:2;
   }
 
 .COCHER{width:80%;
